--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="container">
+  <a href="#"> <span>Read More</span> </a>
+  <a href="#"> <span>Read Less</span> </a>
+</div>
 </body>
 </html>
